--- a/package.json
+++ b/package.json
@@ -9,7 +9,10 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@radix-ui/react-icons": "^1.3.2",
+    "@emotion/react": "^11.14.0",
+    "@emotion/styled": "^11.14.0",
+    "@mui/material": "^6.4.8",
+    "@phosphor-icons/react": "^2.1.7",
     "@radix-ui/themes": "^3.2.1",
     "next": "15.2.2",
     "radix-ui": "^1.1.3",
